Fix burger button not showing bug

--- a/homepage.css
+++ b/homepage.css
@@ -516,7 +516,7 @@ ul.ft-li {
   line-height: 50px;
   font-size: 2em;
 }
-.hidden {
+.hidden-prompt {
   visibility: hidden;
   opacity: 0;
 }
